tests/NormalTests/paczka1/small_fuzzy/48128171.err
Error in line 16: LajUv1Z8x7 A193 43,24
